# hyself_server

./: .gitignore  README.md  docker-compose.yml  init_roles.py  main.py  manage.py  pyproject.toml  verify_roles.py
auth/: __init__.py  exceptions.py  jwt.py  maintenance.py  permissions.py
bbot/: admin.py  asset_compat.py  models.py  recycle_bin.py  tasks.py  tests.py  urls.py  video_processing.py  views.py
bbot/application/: __init__.py
bbot/migrations/: 0004_uploadedfile_is_system_uploadedfile_recycled_at.py  0005_uploadedfile_recycle_original_parent.py  0006_asset_assetreference_asset_asset_media_t_919618_idx_and_more.py
bbot_server/: celery.py  settings.py
bbot_server/cron_jobs/: __init__.py  cleanup_recycle_bin.py
chat/: models.py  serializers.py  tests.py  urls.py  views.py
chat/auth/: __init__.py  permissions.py
chat/domain/: __init__.py  access.py  (+9 more)
game/: tests.py  views.py
hyself/: admin.py  apps.py  asset_compat.py  consumers.py  models.py  recycle_bin.py  system_runtime.py  system_views.py  tasks.py  tests.py  urls.py  video_processing.py  views.py
hyself_server/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
tools/: _bootstrap.py  cleanup_recycle_bin.py  cleanup_smoke_data.py  init_roles.py  reset_local_data.py  seed_smoke_data.py  verify_roles.py
user/: access_context.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
utils/: upload.py  validators.py
validators/: __init__.py  numbers.py
ws/: __init__.py  auth.py  consumers.py  event_bus.py  events.py  input_serializers.py
(+97 files in other folders)
